# src/controllers/cooperativasController.js
@@ -19,6 +19,16 @@ const getCooperativaById = async (req, res) => {
   }
 };
 
+
+const getCooperativaCity = async (req, res) => {
+  try {   
+    const findCooperativa = await CooperativasModel.find(req.params.city).populate("cooperativas");
+    res.status(200).json(findCooperativa);
+  } catch (error) {
+    res.status(500).json({ message: error.message });
+  }
+};
+
 const addNewCooperativa = async (req, res) => {
   try {
     const {
@@ -90,6 +100,7 @@ module.exports = {
   getCooperativaById,
   updateCooperativa,
   deleteCooperativa,
+  getCooperativaCity
 
   
 }
